@@ -1,3 +1,8 @@
+vX.Y.Z (YYYY-MM-dd)
+
+- Update touchstone tool commands to use "ts", enabling use of ts-tools
+  AppImage, requires at minimum touchstone-tools v0.6.x
+
 v0.53.2 (2023-06-19)
 
 - Quiet sqlite3 post-process script from displaying an error when there are no
